--- a/res/layout/contact_list_contacts.xml
+++ b/res/layout/contact_list_contacts.xml
@@ -1,62 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <View
-        android:id="@+id/strut"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/findSelected2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="2.5dp"
-        android:layout_toLeftOf="@+id/strut"
-        android:background="@drawable/button_send"
-        android:text="Check selected"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btnClearRecent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="2.5dp"
-        android:layout_marginRight="5dp"
-        android:layout_toRightOf="@+id/strut"
-        android:background="@drawable/button_send"
-        android:text="Clear recent"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btnOk"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_send"
-        android:onClick="goToShareMyLocation"
-        android:text="OK"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
-
-    <ListView
-        android:id="@+id/listView12"
-        android:layout_width="fill_parent"
-        android:layout_height="304dp"
-        android:layout_above="@+id/btnOk"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/findSelected2" >
-    </ListView>
-
-</RelativeLayout>
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+</android.support.v4.view.ViewPager>
