--- a/res/menu/share_my_location.xml
+++ b/res/menu/share_my_location.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_action_settings"
         android:showAsAction="always"
         android:title="@string/action_settings"
         app:showAsAction="always"/>
