--- a/res/layout/activity_gesture_confirmation.xml
+++ b/res/layout/activity_gesture_confirmation.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:gestureColor="@color/katienavy"
         android:layout_weight="1.0"
         android:background="@drawable/text_border_share_location" >
 
