--- a/res/drawable/text_border_share_location.xml
+++ b/res/drawable/text_border_share_location.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <item>
-      <shape 
-        android:shape="rectangle">
-            <stroke android:width="1.5dp" android:color="@color/katiewhite" />
-
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="1dp"
+                android:color="#EBE6C5" />
+            <solid android:color="@android:color/transparent" />
         </shape>
-   </item>
-
-   <item android:top="1.5dp" android:bottom="1.5dp"> 
-      <shape 
-        android:shape="rectangle">
-            <stroke android:width="1.5dp" android:color="@color/katiewhite" />
+    </item>
+    <item
+        android:bottom="1dp"
+        android:top="1dp">
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="1dp"
+                android:color="#EBE6C5" />
+            <solid android:color="@android:color/transparent" />
         </shape>
-   </item>
+    </item>
 
 </layer-list>
