more ui changes. yay

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send_share_location"
         android:onClick="sendMessage"
-        android:textColor="@color/katiered"
+        android:textColor="#000000"
         android:textStyle="bold"
         android:text="Send (requires confirmation)" />
 
@@ -43,11 +43,13 @@
     <Spinner
         android:id="@+id/spinnerEmergencyDialogs"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignLeft="@+id/buttonSendEmergency"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
         android:layout_alignRight="@+id/buttonSendEmergency"
         android:layout_below="@+id/editEmergencyAddress"
-        android:layout_marginBottom="2.5dp"
         android:background="@drawable/btn_dropdown"
         android:entries="@array/emergency_dialogs"
         android:prompt="@string/dialog_prompt"
@@ -58,8 +60,10 @@
         android:layout_width="250dp"
         android:layout_height="85dp"
         android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
-        android:layout_alignRight="@+id/spinnerEmergencyDialogs"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/spinnerEmergencyDialogs"
         android:background="@drawable/text_border_share_location"
         android:clickable="true"
