--- a/res/drawable/tab_bar_background_selected.xml
+++ b/res/drawable/tab_bar_background_selected.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
- 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="-5dp" android:left="-5dp" android:right="-5dp">
-        <shape android:shape="rectangle">
-            <stroke android:color="@color/katienavy" android:width="5dp"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:left="-5dp"
+        android:right="-5dp"
+        android:top="-5dp">
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="5dp"
+                android:color="@color/katienavy" />
+            <solid android:color="@color/katiewhite" />
         </shape>
     </item>
+
 </layer-list>
