--- a/res/layout/fragment_recent_contacts.xml
+++ b/res/layout/fragment_recent_contacts.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/katienavy" >
-     
+    android:background="@color/katienavy"
+    android:orientation="vertical" >
+
     <View
         android:id="@+id/strut"
         android:layout_width="0dp"
@@ -33,7 +33,6 @@
         android:layout_above="@+id/btnOk"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" >
-
     </ListView>
- 
+
 </RelativeLayout>
