--- a/res/layout-land/activity_emergency.xml
+++ b/res/layout-land/activity_emergency.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
         android:onClick="sendMessage"
-        android:textColor="@color/katiered"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:text="Send (requires confirmation)" />
 
