--- a/res/layout-land/activity_share_my_location.xml
+++ b/res/layout-land/activity_share_my_location.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/button_send"
         android:onClick="sendMessage"
         android:text="Send"
-        android:textColor="@color/katienavy"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <TextView
@@ -85,7 +85,7 @@
         android:background="@drawable/button_send"
         android:onClick="getContactList"
         android:text="Select Contacts"
-        android:textColor="@color/katienavy"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
