--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -228,7 +228,7 @@
     <style name="ProgressDialogTheme" parent="@android:style/Theme.Dialog">
         <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
         <item name="android:textColorPrimary">#000000</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/katiewhite</item>
         <item name="android:textColor">@color/katienavy</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:textColorSecondary">@color/katienavy</item>
@@ -246,7 +246,7 @@
         <item name="android:fullDark">@color/katiewhite</item>
         <item name="android:topBright">@color/katiewhite</item>
         <item name="android:topDark">@color/katiewhite</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/katiewhite</item>
         <item name="android:textColor">@color/katiered</item>
         <item name="android:windowFrame">@null</item>
     </style>
