--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -42,6 +42,7 @@
         android:paddingRight="6dp"
         android:paddingTop="6dp"
         android:scrollbars="vertical"
+        android:textColorHint="@color/katiewhite"
         android:textSize="18sp" />
 
     <TextView
@@ -54,13 +55,14 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:ems="20"
-        android:hint="Finding location...Please return to main page"
+        android:hint="Location information unavailable"
         android:inputType="textMultiLine|textNoSuggestions|none"
         android:maxHeight="140dp"
         android:paddingBottom="4.5dp"
         android:paddingLeft="4.5dp"
         android:paddingRight="4.5dp"
         android:scrollbars="vertical"
+        android:textColorHint="@color/katiewhite"
         android:textSize="20sp" />
 
     <Button
@@ -96,6 +98,7 @@
         android:paddingLeft="4.5dp"
         android:paddingRight="4.5dp"
         android:scrollbars="vertical"
+        android:textColorHint="@color/katiewhite"
         android:textSize="20sp" />
 
 </RelativeLayout>
